@@ -1,8 +1,11 @@
 package org.antlr.v4.runtime.tree.xpath;
 
+import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.tree.ParseTree;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 
 public class XPathRuleElement extends XPathElement {
 	protected int ruleIndex;
@@ -12,7 +15,17 @@ public class XPathRuleElement extends XPathElement {
 	}
 
 	@Override
-	public Collection<? extends ParseTree> evaluate(ParseTree t) {
-		return null;
+	public Collection<ParseTree> evaluate(ParseTree t) {
+				// return all children of t that match nodeName
+		List<ParseTree> nodes = new ArrayList<ParseTree>();
+		for (ParseTree c : t.getChildren()) {
+			if ( c instanceof ParserRuleContext ) {
+				ParserRuleContext ctx = (ParserRuleContext)c;
+				if ( ctx.getRuleIndex() == ruleIndex ) {
+					nodes.add(c);
+				}
+			}
+		}
+		return nodes;
 	}
 }
